--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ clap = { version = "4", features = ["derive"] }
 color-eyre = "0.6.5"
 crossterm = "0.29.0"
 ratatui = "0.29.0"
+serde_json = "1.0.145"
